# job-search

./: LICENSE  README.md  main.py  pyproject.toml  test_db.db
api/: base.py
api/general_pages/: routes.py
api/version1/: route_general_pages.py  route_user.py
core/: config.py  hashing.py
db/: base_class.py  session.py
db/models/: users.py
db/reprository/: users.py
schemas/: users.py
static/images/: 5-A-Tarix-08_12_2022.xls
templates/general_pages/: homepage.html
templates/shared/: base.html
tests/: conftest.py
tests/test_routes/: test_users.py
