[tool.poetry]
name = "job-search"
version = "0.1.0"
description = ""
authors = ["Akbarshokh <akbarshokh2001@gmail.com>"]
readme = "README.md"
packages = [{include = "job_search"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
